--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=api
+spring.datasource.url=jdbc:postgresql://localhost:5432/miau_database
+spring.datasource.username=postgres
+spring.datasource.password=001123
+aws.region=us-east-1
