Alteração do propertiespara acessar o banco serv inclusão do gitignore também

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=api
-spring.datasource.url=jdbc:postgresql://localhost:5432/miau_database
-spring.datasource.username=postgres
-spring.datasource.password=001123
+spring.datasource.url=jdbc:postgresql://dpg-ct95jqggph6c739smd10-a.oregon-postgres.render.com/miau_database
+spring.datasource.username=lucas
+spring.datasource.password=wkfTMaayqUzeX1eNPYD5kQUzPr90ehm0
 aws.region=us-east-1
+
