correcao do properties

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 spring.application.name=api
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://dpg-ct98hsd6l47c73aoj3pg-a:5432/miau_database_yoms
+spring.datasource.url=jdbc:postgresql://dpg-ct98hsd6l47c73aoj3pg-a.oregon-postgres.render.com/miau_database_yoms
 spring.datasource.username=admin
 spring.datasource.password=pplHb0oQZb90Zydh3i1vZLvJb6Y6VH7N
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
