--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.password=pplHb0oQZb90Zydh3i1vZLvJb6Y6VH7N
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+server.port=8080
