alteração do dockerfile

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,16 +1,9 @@
-FROM ubuntu:latest AS build
-
-RUN apt-get update
-RUN apt-get install openjdk-21-jdk -y
+FROM maven:3.9.9-amazoncorretto-21 as build
+WORKDIR /app
 COPY . .
+RUN mvn clean package -X -DskipTests
 
-RUN apt-get install maven -y
-RUN mvn clean install
-
-FROM openjdk:21-jdk-slim
-
-EXPOSE 8080
-
-COPY --from=build /target/api-0.0.1-SNAPSHOT.jar app.jar
-
-ENTRYPOINT ["java", "-jar", "app.jar"]
+FROM openjdk:21-ea-10-jdk-slim
+WORKDIR /app
+COPY --from=build ./app/target/*.jar ./springmiau.jar
+ENTRYPOINT java -jar springmiau.jar
